src/test/ui/generic-associated-types/bugs/issue-91762.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-91762.rs:24:15
   |
LL |         ret = <Self::Base as Functor>::fmap(arg);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the associated function `fmap`
   |
help: consider specifying the generic arguments
   |
LL |         ret = <Self::Base as Functor>::fmap::<T, U>(arg);
   |                                            ++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
